# llm-playground

./: .env.example  .gitignore  AGENTS.md  extract_pdfs.py  pyproject.toml  pytest.ini
.opencode/agents/: architecture-reviewer.md  code-reviewer.md  pre-commit-checker.md  security-diagnosis.md  tdd-reviewer.md
.opencode/handoffs/: session-handoff.md
.opencode/handoffs/2026-04-06-ticket-1-api-client-infrastructure/: handoff.md
.opencode/handoffs/2026-04-06-ticket-1-api-client-infrastructure/output/reviews/: code-review-2026-04-06.json
.opencode/skills/clear-review/: SKILL.md
.opencode/skills/continuation/: SKILL.md
.opencode/skills/ticket-generator/: SKILL.md
docs/context/: architecture.md  financial-analysis-tickets.md  pipeline.md  process-flow.md
docs/context/post-mortems/: 2026-04-06-ticket-1-api-client-infrastructure.md  2026-04-16-ticket-2-market-data-collection.md  2026-04-17-ticket-3-news-data-collection.md
docs/plan/: Project_Process_Plan.txt
src/collect/: __init__.py  client.py  exceptions.py  market_data.py  news_collector.py  news_transformers.py  rate_limiter.py  transformers.py
tests/: conftest.py  test_client.py  test_market_data.py  test_news_collector.py  test_rate_limiter.py  test_transformers.py
tests/fixtures/: __init__.py  http_client.py  market_data.py  news_data.py  rate_limiter.py  resource_tracker.py
