[project]
name = "llm-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pypdf>=6.9.2",
    "httpx>=0.28.0",
    "python-dotenv>=1.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
]
collect = [
    "beautifulsoup4>=4.13.0",
    "python-docx>=1.1.0",
    "pandas>=2.2.0",
]
preprocess = [
    "ftfy>=6.3.0",
    "langdetect>=1.0.9",
    "nltk>=3.9.0",
    "regex>=2024.11.0",
]
model = [
    "torch>=2.6.0",
    "transformers>=4.48.0",
    "accelerate>=1.2.0",
]
generate = [
    "wandb>=0.19.0",
    "tensorboard>=2.18.0",
]
all = [
    "llm-playground[dev,collect,preprocess,model,generate]",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
]

[tool.mypy]
explicit_package_bases = true
namespace_packages = true
